syntax = "proto3";

package test;

import "cbi/protobuf/service.proto";


service TestService {
    rpc UnaryUnary(Request) returns (Response) {}
    rpc UnaryStream(Request) returns (stream Response) {}
    rpc StreamUnary (stream Request) returns (Response) {}
    rpc StreamStream (stream Request) returns (stream Response) {}
}

service InternalTestService {
    option (cbi.protobuf.service.options) = { internal: true };

    rpc SayHello (Request) returns (Response) {}
}

message Request {
    string id = 1;
    map<string, string> metadata = 2;
}

message Response {
    string id = 1;
    map<int32, bool> test = 2;
}
